--- a/Pr29.csproj
+++ b/Pr29.csproj
@@ -22,7 +22,7 @@
     <Folder Include="Images\" />
     <Folder Include="Models\" />
     <Folder Include="Pages\Clubs\Elements\" />
-    <Folder Include="Pages\Users\Elements\" />
+    <Folder Include="Pages\Users\" />
   </ItemGroup>
 
 </Project>
