--- a/Pr29.csproj
+++ b/Pr29.csproj
@@ -20,9 +20,8 @@
   <ItemGroup>
     <Folder Include="Classes\Common\" />
     <Folder Include="Images\" />
-    <Folder Include="Models\" />
     <Folder Include="Pages\Clubs\Elements\" />
-    <Folder Include="Pages\Users\" />
+    <Folder Include="Pages\Users\Elements\" />
   </ItemGroup>
 
 </Project>
